--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 services:
   db:
     image: postgres:16
-    restart: unless-stopped # just restart if crashes, only sto-p with docker compose down or docker stop
+    restart: unless-stopped # just restart if crashes, only stop with docker compose down or docker stop
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
